--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@types/node": "^16.18.59",
         "@types/react": "^18.2.33",
         "@types/react-dom": "^18.2.14",
+        "gh-pages": "^6.1.0",
         "lodash": "^4.17.21",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -18,11 +19,14 @@
         "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
     },
+    "home": "https://baabguui.github.io/songminji/",
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "deploy": "gh-pages -d build",
+        "predeploy": "npm run build"
     },
     "eslintConfig": {
         "extends": [
