--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "predeploy": "npm run build",
-        "deploy": "shx cp build/index.html build/404.html && gh-pages -d build"
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
