--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
         "@types/react-dom": "^18.2.14",
         "gh-pages": "^6.1.0",
         "lodash": "^4.17.21",
+        "prettier": "^3.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.17.0",
         "react-scripts": "5.0.1",
         "shx": "^0.3.4",
-        "typescript": "^4.9.5",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
@@ -52,7 +52,13 @@
         "path": false
     },
     "devDependencies": {
-        "@types/lodash": "^4.14.201"
+        "@types/lodash": "^4.14.201",
+        "@typescript-eslint/eslint-plugin": "^6.13.1",
+        "@typescript-eslint/parser": "^6.13.1",
+        "eslint": "^8.55.0",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.1",
+        "typescript": "^5.3.2"
     },
-    "homepage": "https://baabguui.github.io/songminji"
+    "homepage": "http://songminji.com"
 }
