--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,18 +1,19 @@
 {
-    "parser": "@typescript-eslint/parser",
-    "plugins": ["react", "@typescript-eslint"],
-    "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended",
-        "plugin:prettier/recommended"
-    ],
-    "rules": {
-        "@typescript-eslint/explicit-module-boundary-types": "off",
-        "prettier/prettier": ["error", { "endOfLine": "auto" }]
-    },
-    "settings": {
-        "react": {
-            "version": "detect"
-        }
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["react", "@typescript-eslint"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "rules": {
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "prettier/prettier": ["error", { "endOfLine": "auto" }],
+    "react/react-in-jsx-scope": "off"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
     }
+  }
 }
