--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
-    "printWidth": 80,
-    "singleQuote": true,
-    "trailingComma": "all",
-    "tabWidth": 2,
-    "useTabs": false,
-    "semi": true
+  "printWidth": 80,
+  "singleQuote": false,
+  "trailingComma": "all",
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": true
 }
