--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.59",
     "@types/react": "^18.2.33",
     "@types/react-dom": "^18.2.14",
+    "eslint-plugin-react": "^7.37.4",
     "gh-pages": "^6.1.0",
     "lodash": "^4.17.21",
     "prettier": "^3.1.0",
@@ -56,7 +57,7 @@
     "@types/lodash": "^4.14.201",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
-    "eslint": "^8.55.0",
+    "eslint": "^9.21.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "typescript": "^5.3.2"
